feat: TeamController manages team creation
