# src/main/kotlin/com/posadeus/fantatennis/controller/TeamApi.kt
@@ -1,11 +1,11 @@
 /**
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.8.0).
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.9.0).
  * https://openapi-generator.tech
  * Do not edit the class manually.
 */
 package com.posadeus.fantatennis.controller
 
-import com.posadeus.fantatennis.controller.model.team.TeamDto
+import com.posadeus.fantatennis.controller.model.team.*
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.*
 
@@ -14,9 +14,18 @@ interface TeamApi {
 
 
     @RequestMapping(
+            method = [RequestMethod.POST],
+            value = ["/team"],
+            produces = ["application/json"],
+            consumes = ["application/json"]
+    )
+    fun create( @RequestBody teamToCreateDto: TeamToCreateDto): ResponseEntity<TeamCreatedDto>
+
+
+    @RequestMapping(
             method = [RequestMethod.GET],
             value = ["/team/{teamId}"],
             produces = ["application/json"]
     )
-    fun team( @PathVariable("teamId") teamId: Int): ResponseEntity<TeamDto>
+    fun retrieve( @PathVariable("teamId") teamId: Int): ResponseEntity<TeamDto>
 }
